# yt-dlp-wrapper

./: .editorconfig  .gitignore  COPYRIGHT  Cargo.toml  LICENSE.MIT  README.md  build.rs  deploy-to-local  yt-dlp-wrapper-submit-request
bindgen/: include.h
src/: cli.rs  client.rs  lock.rs  main.rs  musicbrainz.rs  net.rs  process.rs  request.rs  signals.rs  tty.rs  user.rs  video.rs
src/fingerprinting/: acoustid.rs  file.rs  metadata.rs  mod.rs
src/request/: mod.rs
src/tools/: acoustid.rs  chromaprint.rs  fpcalc.rs  mod.rs
src/tty/: handle_requests.rs  instance.rs  mod.rs  server.rs
src/utils/: iters.rs  mod.rs
