[package]
name = "yt-dlp-wrapper"
authors = ["npgx <me@npgx.dev>"]
description = "Handy wrapper to easily work with yt-dlp and beets"
version = "0.1.0"
edition = "2024"

[dependencies]
fd-lock = { version = "4.0.4" }
#atty = { version = "0.2.14" }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["full"] }
tokio = { version = "1.44.2", features = ["full"] }
http-body-util = { version = "0.1.3", features = ["full"] }
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
flexbuffers = { version = "25.2.10" }
url = { version = "2.5.4" }
shlex = { version = "1.3.0" }
#sluice = { version = "0.5.5" }
#futures = { version = "0.3.31", features = ["io-compat"] }
#once_cell = "1.21.3"
#pin-project = { version = "1.1.10" }
thiserror = { version = "2.0.12" }
console = { version = "0.15.11" }
dialoguer = { version = "0.11.0" }
tempfile = { version = "3.19.1" }
