[package]
name = "yt-dlp-wrapper"
authors = ["npgx <me@npgx.dev>"]
description = "Handy wrapper to easily work with yt-dlp and beets"
version = "0.1.0"
edition = "2024"

[build-dependencies]
pkg-config = { version = "0.3.32" }
bindgen = { version = "0.71.1" }

[dependencies]
fd-lock = { version = "4.0.4" }
tokio = { version = "1.44.2", features = ["full"] }
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
url = { version = "2.5.4" }
shlex = { version = "1.3.0" }
thiserror = { version = "2.0.12" }
dialoguer = { version = "0.11.0" }
tempfile = { version = "3.19.1" }
tower = { version = "0.5.2", features = ["full"] }
axum = { version = "0.8.3", features = ["http2"] }
reqwest = { version = "0.12.15", features = ["json"] }
anyhow = { version = "1.0.98" }
musicbrainz_rs = { version = "0.9.1" }

[profile.dev]
codegen-units = 1

[profile.release]
lto = "fat"
codegen-units = 1
