[package]
name = "yt-dlp-wrapper"
version = "0.1.0"
authors = ["npgx <me@npgx.dev>"]
edition = "2024"
description = "Handy wrapper to easily work with yt-dlp and beets"
readme = "README.md"
license = "MIT OR Apache-2.0"


[dependencies]
fd-lock = { version = "4.0.4" }
tokio = { version = "1.44.2", features = ["full"] }
clap = { version = "4.5.36", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
url = { version = "2.5.4" }
shlex = { version = "1.3.0" }
thiserror = { version = "2.0.12" }
console = { version = "0.15.11" }
dialoguer = { version = "0.11.0" }
indicatif = { version = "0.17.11" }
tempfile = { version = "3.19.1" }
tower = { version = "0.5.2", features = ["full"] }
axum = { version = "0.8.3", features = ["http2"] }
reqwest = { version = "0.12.15", features = ["json"] }
anyhow = { version = "1.0.98" }
musicbrainz_rs = { version = "0.9.1" }
once_cell = { version = "1.21.3", features = ["parking_lot"] }

[profile.release]
lto = "fat"
codegen-units = 1
